--- a/templates/main.html
+++ b/templates/main.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='src/jquery-ui/css/jquery-ui.min.css') }}">
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+    <script src="../static/js/build.js"></script>
 </head>
 <body>
 <img src="{{ url_for('static', filename='src/img/eldenring.png') }}" class="bg">
