--- a/static/css/main.css
+++ b/static/css/main.css
@@ -83,6 +83,27 @@ html::-webkit-scrollbar-thumb {
     margin: 15px 5px;
 }
 
+.dlc-option {
+    height: 90px;
+    width: 120px;
+    padding: 0;
+    display: inline-block;
+    border-radius: 2px;
+    cursor: pointer;
+    transition: 0.6s;
+    margin: 15px 5px;
+}
+.dlc-option-active {
+    height: 120px;
+    width: 160px;
+}
+.image {
+    filter: hue-rotate(315deg) saturate(600%);
+}
+.image-active {
+    filter: hue-rotate(60deg) saturate(300%) contrast(120%);
+}
+
 .country-active {
     height: 45px;
     width: 60px;
