--- a/templates/main.html
+++ b/templates/main.html
@@ -24,6 +24,11 @@
     <span uk-icon="icon: close; ratio: 1" id="close_overlay"></span>
     <div class="uk-align-center overlay-content uk-position-center" id="overlay_content">
         <ul class="uk-list uk-list-collapse uk-list-divider">
+            <li id="dlc">
+                <span class="dlc-option" id="dlc_toggle">
+                    <img loading="lazy" class="image" id="dlc_icon" src="{{ url_for('static', filename='src/img/dlc-min.png') }}" alt="dlc icon">
+                </span>
+            </li>
             <li id="languages">
                 <span class="fi fi-en country-flag" id="english" language="en"></span>
                 <span class="fi fi-de country-flag" id="german" language="de"></span>
